# gongdo

./: .gitignore
client/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.css  App.tsx  db.ts  index.css
client/src/components/: ConfirmModal.css  ConfirmModal.tsx  ResultDisplay.css  ResultDisplay.tsx  SearchForm.css  SearchForm.tsx  SessionSidebar.css  SessionSidebar.tsx  SourceSidebar.css  SourceSidebar.tsx  SplashScreen.css  SplashScreen.tsx
preprocessing/: .girignore  main.py  pyproject.toml  search.py
server/: pyproject.toml
server/app/: main.py  model.py
